--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         <div class="product-display">
             <div class="product-container">
                 <div class="product-image">
-                    <img v-bind:src="image">
+                    <img :src="image">
                 </div>
                 <div class="product-info">
+                    <h1><a :href="link">{{ product }}</a></h1>
                     <h1>{{product}}</h1>
+                    <p>In Stock</p>
+                    <p>Out of Stock</p>
                 </div>
             </div>
         </div>
