--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div class="product-info">
                     <h1><a :href="link">{{ product }}</a></h1>
                     <h1>{{product}}</h1>
-                    <p>In Stock</p>
-                    <p>Out of Stock</p>
+                    <p v-if="inventory > 10"> In Stock</p>
+                    <p v-else>Out of Stock</p>
                 </div>
             </div>
         </div>
