--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                     <h1><a :href="link">{{ product }}</a></h1>
                     <h1>{{product}}</h1>
                     <p v-if="inventory > 10"> In Stock</p>
+                    <p v-else-if="inventory <= 10 && inventory > 0"> In Stock</p>
                     <p v-else>Out of Stock</p>
+                    <ul>
+                        <li v-for="detail in detail">{{ detail }}</li>
+                    </ul>
                 </div>
             </div>
         </div>
